Deuxième version / HTML Header Fini ?

--- a/codeMinimum.html
+++ b/codeMinimum.html
@@ -6,13 +6,34 @@
     </head>
     <body>
         <header id="mainHeader">
+          <div>
             <h1>CLUB AUTO</h1>
+            <p><img src="ImgHeader/icone-adresse.png" alt="logo adresse"></p>
+            <p>ADRESSE: <br> AVENUE CHARLES DE GAULLE <br> 75000 PARIS</p>
+            <p><img src="ImgHeader/icon-telephone.png" alt="logo telephone"></p>
+            <p>TÉLÉPHONE: <br> <strong>01 23 45 67 89</strong></p>
+            <p>OUVERTURE: Du Lundi au Samedi <br> HORAIRES: De 9h à 17h</p>
+            <p><img src="logos/logoFacebookRond.jpg" alt="logo rond facebook "></p>
+            <p><img src="logos/logoTwitterRond.jpg" alt="logo rond twitter"></p>
+          </div>
+          <div>
+            <p><strong>ACCUEIL</strong></p>
+            <p><strong>VENTE</strong></p>
+            <p><strong>LOCATION</strong></p>
+            <p><strong>CONTACT</strong></p>
+          </div>
+          <div>
+            <p><img src="imgHeader/vehicule1.jpg" alt="img d'en-tête"></p>
+          </div>
+          <div>
+            <h1><strong>CLUB AUTO LE MEILLEUR DE L'AUTOMOBILE</strong></h1>
+          </div>
         </header><!--Ici se termine le #mainHeader-->
         <div id="pageContent"></div><!--Ici se termine le #pageContent-->
         <section id="mainFooter">
             <footer>
                 <h3>CLUB AUTO</h3>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Alias dicta debitis aliquam.</p>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Labore nesciunt natus id, facere voluptatibus praesentium adipisci similique ea sit.</p>
                 <h3>HORAIRE D'OUVERTURE</h3>
                 <p>Lundi - Samedi : 09:00 - 17H00 <br> Dimanche et jours fériés : Fermé</p>
                 <h3>NEWSLETTER</h3>
