Troisème Version / Création de la page Contact / Ajouter les liens sur chaque pages pour naviguer dans le site (accueil, contact, vente, location)

--- a/merci.html
+++ b/merci.html
@@ -40,9 +40,13 @@
     <div>
       <h1><strong>CLUB AUTO LE MEILLEUR DE L'AUTOMOBILE</strong></h1>
     </div>
-  </header>>
+  </header>
   <!--Ici se termine le #mainHeader-->
-  <div id="pageContent"></div>
+  <main id="pageContent">
+    <h1>Merci</h1>
+    <p>Merci pour votre message. Notre équipe reprendra contact avec vous dans les 3 jours ouvrables.</p>
+    <p>À très bientôt</p>
+  </main>
   <!--Ici se termine le #pageContent-->
   <section id="mainFooter">
     <footer>
