--- a/codeMinimum.html
+++ b/codeMinimum.html
@@ -1,54 +1,71 @@
 <!DOCTYPE html>
 <html lang="fr">
-    <head>
-        <meta charset="utf-8">
-        <title>Club Auto</title>
-    </head>
-    <body>
-        <header id="mainHeader">
-          <div>
-            <h1>CLUB AUTO</h1>
-            <p><img src="ImgHeader/icone-adresse.png" alt="logo adresse"></p>
-            <p>ADRESSE: <br> AVENUE CHARLES DE GAULLE <br> 75000 PARIS</p>
-            <p><img src="ImgHeader/icon-telephone.png" alt="logo telephone"></p>
-            <p>TÉLÉPHONE: <br> <strong>01 23 45 67 89</strong></p>
-            <p>OUVERTURE: Du Lundi au Samedi <br> HORAIRES: De 9h à 17h</p>
-            <p><img src="logos/logoFacebookRond.jpg" alt="logo rond facebook "></p>
-            <p><img src="logos/logoTwitterRond.jpg" alt="logo rond twitter"></p>
-          </div>
-          <div>
-            <p><strong>ACCUEIL</strong></p>
-            <p><strong>VENTE</strong></p>
-            <p><strong>LOCATION</strong></p>
-            <p><strong>CONTACT</strong></p>
-          </div>
-          <div>
-            <p><img src="imgHeader/vehicule1.jpg" alt="img d'en-tête"></p>
-          </div>
-          <div>
-            <h1><strong>CLUB AUTO LE MEILLEUR DE L'AUTOMOBILE</strong></h1>
-          </div>
-        </header><!--Ici se termine le #mainHeader-->
-        <div id="pageContent"></div><!--Ici se termine le #pageContent-->
-        <section id="mainFooter">
-            <footer>
-                <h3>CLUB AUTO</h3>
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Labore nesciunt natus id, facere voluptatibus praesentium adipisci similique ea sit.</p>
-                <h3>HORAIRE D'OUVERTURE</h3>
-                <p>Lundi - Samedi : 09:00 - 17H00 <br> Dimanche et jours fériés : Fermé</p>
-                <h3>NEWSLETTER</h3>
-                <div>
-                    <input type="email" id="Email" placeholder="Entrez votre email" required>
-                </div>
-                <p>Inscrivez-vous pour recevoir les dernières offres</p>
-                <h3>RESEAUX SOCIAUX</h3>
-                <p><img src="logos/logoFacebook.jpg" alt="logo facebook" ></p>
-                <p><img src="logos/logoTwitter.jpg" alt="logo twitter" ></p>
-                <p><img src="logos/logoInstagram.jpg" alt="logo instagram" ></p>
-                <p><img src="logos/logoGooglePlus.jpg" alt="logo googleplus" ></p>
-                <p><img src="logos/logoYoutube.jpg" alt="logo youtube" ></p>
-                <p>Copyright &copy; Club Auto - Tous droits réservés</p>
-            </footer>
-        </section><!--Ici se termine le #mainFoter-->
-    </body>
+
+<head>
+  <meta charset="utf-8">
+  <title>Club Auto</title>
+</head>
+
+<body>
+  <header id="mainHeader">
+    <h1>CLUB AUTO</h1>
+    <div>
+      <p><img src="ImgHeader/icone-adresse.png" alt="logo adresse"></p>
+      <p>ADRESSE: <br> AVENUE CHARLES DE GAULLE <br> 75000 PARIS</p>
+    </div>
+    <div>
+      <p><img src="ImgHeader/icon-telephone.png" alt="logo telephone"></p>
+      <p>TÉLÉPHONE: <br> <strong>01 23 45 67 89</strong></p>
+    </div>
+    <div>
+      <p>OUVERTURE: Du Lundi au Samedi <br> HORAIRES: De 9h à 17h</p>
+    </div>
+    <div>
+      <p><img src="logos/logoFacebookRond.jpg" alt="logo rond facebook "></p>
+      <p><img src="logos/logoTwitterRond.jpg" alt="logo rond twitter"></p>
+    </div>
+    <nav id="mainNav">
+      <ul>
+        <li><a href="Index"><strong>ACCUEIL</strong></a></li>
+        <li><a href="#"><strong>VENTE</strong></a></li>
+        <li><a href="#"><strong>LOCATION</strong></a></li>
+        <li><a href="contact-desktop.html"><strong>CONTACT</strong></a></li>
+      </ul>
+    </nav>
+    <button id="menuToggle"><img src="/ImgHeader/hamburger.svg" alt="Ouvir / Fermer le menu"></button>
+    </div>
+    <div>
+      <p><img src="imgHeader/vehicule1.jpg" alt="img d'en-tête"></p>
+    </div>
+    <div>
+      <h1><strong>CLUB AUTO LE MEILLEUR DE L'AUTOMOBILE</strong></h1>
+    </div>
+  </header>
+  <!--Ici se termine le #mainHeader-->
+  <div id="pageContent"></div>
+  <!--Ici se termine le #pageContent-->
+  <section id="mainFooter">
+    <footer>
+      <h3>CLUB AUTO</h3>
+      <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Labore nesciunt natus id, facere voluptatibus
+        praesentium adipisci similique ea sit.</p>
+      <h3>HORAIRE D'OUVERTURE</h3>
+      <p>Lundi - Samedi : 09:00 - 17H00 <br> Dimanche et jours fériés : Fermé</p>
+      <h3>NEWSLETTER</h3>
+      <div>
+        <input type="email" id="Email" placeholder="Entrez votre email" required>
+      </div>
+      <p>Inscrivez-vous pour recevoir les dernières offres</p>
+      <h3>RESEAUX SOCIAUX</h3>
+      <p><img src="logos/logoFacebook.jpg" alt="logo facebook"></p>
+      <p><img src="logos/logoTwitter.jpg" alt="logo twitter"></p>
+      <p><img src="logos/logoInstagram.jpg" alt="logo instagram"></p>
+      <p><img src="logos/logoGooglePlus.jpg" alt="logo googleplus"></p>
+      <p><img src="logos/logoYoutube.jpg" alt="logo youtube"></p>
+      <p>Copyright &copy; Club Auto - Tous droits réservés</p>
+    </footer>
+  </section>
+  <!--Ici se termine le #mainFoter-->
+</body>
+
 </html>
