Quatrième version / rename de la page contact / Ajout de logos et d'images / création de la page vente et de la page détails

--- a/DétailsVéhicules.html
+++ b/DétailsVéhicules.html
@@ -35,7 +35,32 @@
     <button id="menuToggle"><img src="/ImgHeader/hamburger.svg" alt="Ouvir / Fermer le menu"></button>
   </header>
   <!--Ici se termine le #mainHeader-->
-  <main id="pageContent"></main>
+  <main id="pageContent">
+    <h1>BMW 535i, Navi, Leather, ABS</h1>
+    <p><img src="/ImgGlobal/vehicule2.jpg" alt="Véhicule Vente"></p>
+    <nav id="DétailsNav">
+        <ul>
+          <li>DESCRIPTION</li>
+          <li>TECHNIQUE</li>
+          <li>OPTIONS</li>
+          <li>CONTACT</li>
+        </ul>
+      </nav>
+      <article>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Blanditiis fuga, repudiandae totam assumenda quia magnam voluptatum labore tempora. Exercitationem laborum amet facilis dolor et, aperiam cupiditate quis est sit labore.</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur maxime cumque cupiditate soluta eligendi vitae neque nisi sint delectus, at placeat ut harum consequatur aliquid, explicabo similique. Commodi cumque tempora ea? Tempora eaque perspiciatis inventore laborum non. Fugiat iste non laudantium illum rerum magnam voluptatem voluptatibus aperiam veniam. Totam, maxime in tempora eaque dolorem labore? Fuga possimus omnis iste magni exercitationem reprehenderit sunt veritatis ducimus aliquam quam expedita, dolore culpa. Non, saepe tenetur? Aut quia earum error omnis accusamus corrupti temporibus, dolore praesentium veniam rerum assumenda nisi est eius tempora magni quasi, harum, vel ipsa officiis! Neque facere repellendus quidem!</p>
+        <p><i>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Explicabo quod nesciunt, deleniti ex temporibus dolorem alias quaerat commodi nam repellendus cumque tenetur deserunt, eius blanditiis pariatur eveniet sapiente labore eos?</i></p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi tenetur exercitationem tempore, sed enim provident dolorem. Harum saepe amet sint, illo dolorem nihil tenetur laboriosam earum commodi incidunt dolore vitae similique iste, voluptatum odio dolores rerum quos officiis sit facilis labore omnis reprehenderit. Facere placeat maiores illum mollitia ipsa ratione!</p>
+        <h3>OPTIONS</h3>
+        <ul>
+            <li>Lorem ipsum dolor sit amet.</li>
+            <li>Lorem ipsum dolor sit amet.</li>
+            <li>Lorem ipsum dolor sit amet.</li>
+            <li>Lorem ipsum dolor sit amet.</li>
+            <li>Lorem ipsum dolor sit amet.</li>
+          </ul>
+        </article>
+  </main>
   <!--Ici se termine le #pageContent-->
   <section id="mainFooter">
     <footer>
