--- a/Index.html
+++ b/Index.html
@@ -29,24 +29,137 @@
         <li><a href="Index"><strong>ACCUEIL</strong></a></li>
         <li><a href="#"><strong>VENTE</strong></a></li>
         <li><a href="#"><strong>LOCATION</strong></a></li>
-        <li><a href="contact-desktop.html"><strong>CONTACT</strong></a></li>
+        <li><a href="contact.html"><strong>CONTACT</strong></a></li>
       </ul>
     </nav>
     <button id="menuToggle"><img src="/ImgHeader/hamburger.svg" alt="Ouvir / Fermer le menu"></button>
-    </div>
+  </header>>
+  <!--Ici se termine le #mainHeader-->
+  <main id="pageContent">
     <div>
       <p><img src="imgHeader/vehicule1.jpg" alt="img d'en-tête"></p>
     </div>
     <div>
-      <h1><strong>CLUB AUTO LE MEILLEUR DE L'AUTOMOBILE</strong></h1>
+      <h2>CLUB AUTO <strong>LE MEILLEUR DE L'AUTOMOBILE</strong></h2>
     </div>
-  </header>>
-  <!--Ici se termine le #mainHeader-->
-  <div id="pageContent"></div>
+    <div>
+      <p><img src="/ImgGlobal/clients.jpg" alt="img client"></p>
+    </div>
+    <div>
+      <h2>BIENVENUE CHEZ <strong>CLUB AUTO</strong></h2>
+      <p><strong>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam quaerat nostrum consequatur aut
+          neque
+          exercitationem ratione doloribus praesentium adipisci a.</strong></p>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse, ducimus nostrum fugiat labore aspernatur
+        asperiores doloribus tempora, tempore laborum neque nulla ex dicta, nihil eos ab eveniet. Perferendis, ducimus?
+        Tenetur blanditiis accusantium nostrum expedita. Iusto quod praesentium, enim quasi voluptatem, vero qui
+        accusantium excepturi tempora a, inventore ipsam in quaerat ea corrupti quis deserunt at velit quisquam cumque
+        nostrum exercitationem minima porro? Quibusdam excepturi rerum ad quam qui impedit iusto repellat voluptatibus
+        eum, distinctio rem! Architecto officiis voluptatum porro facere?
+      </p>
+    </div>
+    <div>
+      <p>LE MEILLEUR DE L'AUTOMOBILE</p>
+      <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolor reiciendis aliquam qui cupiditate, harum
+        aperiam
+        maxime animi magni! A commodi error quisquam accusantium alias inventore laborum fugit. Mollitia consectetur
+        odio
+        reiciendis nostrum quibusdam vero, itaque vitae perspiciatis culpa recusandae, tempora delectus aliquid
+        similique
+        enim. Sunt aperiam ab impedit est, facere vero, cum nesciunt praesentium, magnam debitis vel ut suscipit dolor?
+      </p>
+      <ul>
+        <li>Lorem ipsum dolor sit amet.</li>
+        <li>Lorem ipsum dolor sit amet.</li>
+        <li>Lorem ipsum dolor sit amet.</li>
+        <li>Lorem ipsum dolor sit amet.</li>
+        <li>Lorem ipsum dolor sit amet.</li>
+      </ul>
+    </div>
+    <div>
+      <p><img src="/ImgGlobal/entretien.jpg" alt="entrentien"></p>
+    </div>
+    <div>
+      <p><img src="/ImgGlobal/vente-location.jpg" alt="location"></p>
+    </div>
+    <div>
+      <h3>Vous souhaitez louer?</h3>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis, dicta reiciendis. Et alias nesciunt amet
+        sit
+        repudiandae quod officiis incidunt cupiditate in architecto quaerat saepe, rerum quidem assumenda ut voluptatem
+        expedita recusandae magni quibusdam nam, exercitationem suscipit! Quam tempore accusamus natus eius, fuga odit
+        quos ad, eveniet impedit nobis ducimus.</p>
+    </div>
+    <div>
+      <h3>Vous souhaitez acheter?</h3>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo, ad nemo dolore maxime veritatis accusantium
+        quos suscipit. Et, veniam similique accusantium assumenda ipsam cupiditate id fugiat voluptatem in modi amet
+        excepturi reiciendis mollitia blanditiis omnis facere sapiente quam dignissimos. Repellat unde ex expedita qui
+        esse, nobis explicabo enim officiis doloribus.</p>
+    </div>
+    <div>
+      <h2>VÉHICULES RÉCENTS</h2>
+    </div>
+    <div>
+      <p><img src="/ImgGlobal/vehicule2.jpg" alt="vehicules ventes"></p>
+      <p>BMW 5351, NAVI, LEATHER, ABS</p>
+      <p>5500€</p>
+    </div>
+    <div>
+      <p><img src="/ImgGlobal/vehicule2.jpg" alt="vehicules ventes"></p>
+      <p>BMW 3281, SPORT, LINE BODY KIT</p>
+      <p>8000€</p>
+    </div>
+    <div>
+      <p><img src="/ImgGlobal/vehicule2.jpg" alt="vehicules ventes"></p>
+      <p>FORD EXPLORER 2015 4WD</p>
+      <p>9000€</p>
+      <p>8200€</p>
+    </div>
+    <div>
+      <h2><strong>Pourquoi nous choisir ?</strong></h2>
+    </div>
+    <div>
+      <p><img src="/LogoGlobal/icon1.png" alt="Financement"></p>
+      <p>FINANCEMENT</p>
+      <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Rerum impedit excepturi quam quisquam accusamus sunt
+        harum. Vel dignissimos nesciunt corrupti ducimus maxime doloremque ex accusantium!</p>
+    </div>
+    <div>
+      <p><img src="/LogoGlobal/icon2.png" alt="Réactivité"></p>
+      <p>RÉACTIVITÉ DE L'ÉQUIPE TECHNIQUE</p>
+      <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Rerum impedit excepturi quam quisquam accusamus sunt
+        harum. Vel dignissimos nesciunt corrupti ducimus maxime doloremque ex accusantium!</p>
+    </div>
+    <div>
+      <p><img src="/LogoGlobal/icon3.png" alt="Ecoute"></p>
+      <p>A L'ÉCOUTE DE NOTRE CLIENTÈLE</p>
+      <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Rerum impedit excepturi quam quisquam accusamus sunt
+        harum. Vel dignissimos nesciunt corrupti ducimus maxime doloremque ex accusantium!</p>
+    </div>
+    <div>
+      <p><img src="/LogoGlobal/icon4.png" alt="Service et maintenance"></p>
+      <p>SERVICE &amp; MAINTENANCE</p>
+      <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Rerum impedit excepturi quam quisquam accusamus sunt
+        harum. Vel dignissimos nesciunt corrupti ducimus maxime doloremque ex accusantium!</p>
+    </div>
+    <div>
+      <p><a href="contact.html">CONTACTEZ-NOUS</a></p>
+    </div>
+    <div>
+
+      <h2>CLUB AUTO <strong>VENTE ET LOCATION</strong></h2>
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Libero, eaque architecto illum excepturi, ab eum
+        atque consequuntur dicta, quia explicabo voluptatibus? Recusandae ab nisi laboriosam quo harum quod nihil omnis
+        ipsum, blanditiis rerum nobis obcaecati? Provident iure minima impedit minus?</p>
+      <p><img src="/ImgGlobal/vehicule3.jpg" alt="véhicule 3 arrière plan"></p>
+    </div>
+
+  </main>
   <!--Ici se termine le #pageContent-->
   <section id="mainFooter">
     <footer>
-      <h3>CLUB AUTO</h3>
+      <h3><strong>CLUB</strong> AUTO</h3>
       <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Labore nesciunt natus id, facere voluptatibus
         praesentium adipisci similique ea sit.</p>
       <h3>HORAIRE D'OUVERTURE</h3>
