--- a/contact.html
+++ b/contact.html
@@ -29,17 +29,10 @@
                 <li><a href="Index"><strong>ACCUEIL</strong></a></li>
                 <li><a href="#"><strong>VENTE</strong></a></li>
                 <li><a href="#"><strong>LOCATION</strong></a></li>
-                <li><a href="contact-desktop.html"><strong>CONTACT</strong></a></li>
+                <li><a href="contact.html"><strong>CONTACT</strong></a></li>
             </ul>
         </nav>
         <button id="menuToggle"><img src="/ImgHeader/hamburger.svg" alt="Ouvir / Fermer le menu"></button>
-        </div>
-        <div>
-            <p><img src="imgHeader/vehicule1.jpg" alt="img d'en-tête"></p>
-        </div>
-        <div>
-            <h1><strong>CLUB AUTO LE MEILLEUR DE L'AUTOMOBILE</strong></h1>
-        </div>
     </header>
     <!--Ici se termine le #mainHeader-->
     <main id="pageContent">
@@ -75,7 +68,7 @@
     <!--Ici se termine le #pageContent-->
     <section id="mainFooter">
         <footer>
-            <h3>CLUB AUTO</h3>
+            <h3><strong>CLUB</strong> AUTO</h3>
             <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Labore nesciunt natus id, facere voluptatibus
                 praesentium adipisci similique ea sit.</p>
             <h3>HORAIRE D'OUVERTURE</h3>
