--- a/codeMinimum.html
+++ b/codeMinimum.html
@@ -26,9 +26,9 @@
     </div>
     <nav id="mainNav">
       <ul>
-        <li><a href="Index"><strong>ACCUEIL</strong></a></li>
-        <li><a href="#"><strong>VENTE</strong></a></li>
-        <li><a href="#"><strong>LOCATION</strong></a></li>
+        <li><a href="Index.html"><strong>ACCUEIL</strong></a></li>
+        <li><a href="vente.html"><strong>VENTE</strong></a></li>
+        <li><a href="location.html"><strong>LOCATION</strong></a></li>
         <li><a href="contact.html"><strong>CONTACT</strong></a></li>
       </ul>
     </nav>
