--- a/location.html
+++ b/location.html
@@ -36,7 +36,7 @@
     </header>
     <!--Ici se termine le #mainHeader-->
     <main id="pageContent">
-        <h1>VENTE</h1>
+        <h1>LOCATION</h1>
         <p><img src="/ImgGlobal/vente-location.jpg" alt="en-tête"></p>
         <p>ORDRE:</p>
         <select>
@@ -48,7 +48,7 @@
             <p><strong>BMW 535i, Navi, Leather, ABS</strong></p>
             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Provident rerum labore quidem at optio!
                 Expedita earum aperiam incidunt. Hic iure, impedit recusandae eaque qui cumque.</p>
-            <p>5000€</p>
+            <p>20€/jour</p>
             <p><a href="#">En savoir plus</a></p>
         </div>
         <div>
@@ -56,7 +56,7 @@
             <p><strong>BMW 535i, Navi, Leather, ABS</strong></p>
             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Provident rerum labore quidem at optio!
                 Expedita earum aperiam incidunt. Hic iure, impedit recusandae eaque qui cumque.</p>
-            <p>5000€</p>
+            <p>20€/jour</p>
             <p><a href="#">En savoir plus</a></p>
         </div>
         <div>
@@ -64,7 +64,7 @@
             <p><strong>BMW 535i, Navi, Leather, ABS</strong></p>
             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Provident rerum labore quidem at optio!
                 Expedita earum aperiam incidunt. Hic iure, impedit recusandae eaque qui cumque.</p>
-            <p>5000€</p>
+            <p>20€/jour</p>
             <p><a href="#">En savoir plus</a></p>
         </div>
         <div>
@@ -72,7 +72,7 @@
             <p><strong>BMW 535i, Navi, Leather, ABS</strong></p>
             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Provident rerum labore quidem at optio!
                 Expedita earum aperiam incidunt. Hic iure, impedit recusandae eaque qui cumque.</p>
-            <p>5000€</p>
+            <p>20€/jour</p>
             <p><a href="#">En savoir plus</a></p>
         </div>
         <div>
