--- a/contact.html
+++ b/contact.html
@@ -18,7 +18,7 @@
             <p>TÉLÉPHONE: <br> <strong>01 23 45 67 89</strong></p>
         </div>
         <div>
-            <p>OUVERTURE: Du Lundi au Samedi <br> HORAIRES: De 9h à 17h</p>
+            <p>OUVER: Du Lundi au Samedi <br> HORAIRES: De 9h à 17h</p>
         </div>
         <div>
             <p><img src="logos/logoFacebookRond.jpg" alt="logo rond facebook "></p>
