--- a/merci.html
+++ b/merci.html
@@ -25,6 +25,8 @@
       <p><img src="logos/logoTwitterRond.jpg" alt="logo rond twitter"></p>
     </div>
     <nav id="mainNav">
+      <h1 class="accessibility">Menu principal</h1>
+                    <p class="accessibility"><a href="#pageContent" title="Accéder directement au contenu principal de cette page">Passer le menu</a></p>
       <ul>
         <li><a href="Index.html"><strong>ACCUEIL</strong></a></li>
         <li><a href="vente.html"><strong>VENTE</strong></a></li>
