--- a/test.html
+++ b/test.html
@@ -193,3 +193,49 @@
                     </figure>
             </article>
         </section>
+
+
+
+
+        <aside class="col-10 col-sm-2 offset-1 order-sm-last">
+            <div class="shadow row d-sm-block" style="margin-top: -3em">
+                <div class="row bg-dark py-4 px-5 m-0">
+                    <img src="/LogoGlobal/icone-voiture.png" alt="icône recherche" class="col-auto px-4"
+                        style="height: 2.5em; width:auto">
+                    <h1 class="fs-2 col-auto col-sm-2 text-white">Rechercher</h1>
+                </div>
+                <select class="ms-5 ms-sm-4 me-sm-4 mt-5 mt-sm-4 col-9 py-2 bg-light  border-0" form="type" id="type">
+                    <option selected>Type</option>
+                </select>
+                <select class="ms-5 ms-sm-4 mt-3 col-9 py-2 bg-light  border-0" form="carburant" id="carburant">
+                    <option selected>Carburant</option>
+                </select>
+                <select class="ms-5 ms-sm-4 mt-3 col-9 py-2 bg-light  border-0" form="marque" id="marque">
+                    <option selected>Marque</option>
+                </select>
+                <select class="ms-5 ms-sm-4 mt-3 col-9 py-2 bg-light  border-0" form="modele" id="modele">
+                    <option selected>Mod&egrave;le</option>
+                </select>
+                <select class="ms-5 ms-sm-4 mt-3 col-9 py-2 bg-light  border-0" form="kilometrage" id="kilometrage">
+                    <option selected>Kilom&egrave;trage maximal</option>
+                </select>
+                <select class="ms-5 ms-sm-4 mt-3 col-9 py-2 bg-light border-0" form="anciennete" id="anciennete">
+                    <option selected>Anciennet&eacute;</option>
+                </select>
+                <div class="row m-0 p-0">
+                    <h1 class="fs-5 fw-bold mt-4 col-9 offset-1 p-sm-0">Prix</h1>
+                    <img src="/LogoGlobal/Selecteur.png" alt="selecteur"
+                        class="ps-2 col-10 offset-1 m-sm-0 p-sm-0">
+                    <span class="ms-5 ms-sm-4 mt-3 col-9 col-sm-4 offset-1 py-2 bg-light text-center">
+                        2000
+                    </span>
+                    <span class="ms-5 ms-sm-3 mt-3 col-9 col-sm-4 offset-1 py-2 bg-light text-center">
+                        80000
+                    </span>
+                </div>
+                <div class="py-5">
+                    <button type="reset" value="Réinitialiser la recherche" class="btn btn-primary col-10 py- px-"><a
+                            class="text-white fw-bold fs-5">R&Eacute;INITIALISER</a></button>
+                </div>
+            </div>
+        </aside>
