--- a/Index.html
+++ b/Index.html
@@ -33,7 +33,7 @@
                                     title="Accéder directement au contenu principal de cette page">Passer le
                                     menu</a></p>
                             <ul class="navbar-nav ms-auto">
-                                <li class="nav-item"><a class="nav-link" href="Index.html">ACCUEIL</a></li>
+                                <li class="nav-item"><a class="nav-link" href="index.html">ACCUEIL</a></li>
                                 <li class="nav-item"><a class="nav-link" href="vente.html">VENTE</a></li>
                                 <li class="nav-item"><a class="nav-link" href="location.html">LOCATION</a></li>
                                 <li class="nav-item"><a class="nav-link" href="contact.html">CONTACT</a></li>
@@ -41,7 +41,8 @@
                         </nav>
                     </div>
                 </div>
-                <h1 class="d-none d-sm-flex text-white fs-2 fw-bold col-sm align-self-center p-0 ps-sm-6 pt-sm-4 m-0">CLUB AUTO</h1>
+                <h1 class="d-none d-sm-flex text-white fs-2 fw-bold col-sm align-self-center p-0 ps-sm-6 pt-sm-4 m-0">
+                    CLUB AUTO</h1>
                 <div class="d-none d-sm-flex row col-sm align-self-center p-0 pt-sm-4 m-0 lh-sm">
                     <img src="/ImgHeader/icone-adresse.png" alt="Icone d'adresse" class="col-auto pe-0"
                         style="height: 2.5em; width:auto">
@@ -74,8 +75,8 @@
             <div class="d-flex justify-content-end col-10 offset-1" id="navbarSupportedContent">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link text-white bg-secondary fw-bold disabled py-3 px-4 d-block"
-                            href="/Index.html" title="Vers la page d'acceuil du site Club Auto"><span>ACCUEIL</span></a>
+                        <a class="nav-link text-white bg-secondary fw-bold py-3 px-4 d-block"
+                            href="/index.html" title="Vers la page d'acceuil du site Club Auto"><span>ACCUEIL</span></a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link text-black fw-bold py-3 px-4" href="/vente.html"
@@ -100,7 +101,8 @@
             <div class="bg-dark">
                 <img class="d-none d-sm-flex" src="/imgHeader/vehicule1.jpg" alt="img d'en-tête"
                     style="width: 100%;height: auto">
-                <h1 class="fs-2 fw-bold text-white py-5 px-3 col-10 offset-1 col-sm-12">CLUB AUTO <span class="text-secondary">LE
+                <h1 class="clubAuto fs-2 fw-bold text-white py-5 px-3 col-10 offset-1 col-sm-12">CLUB AUTO <span
+                        class="text-secondary">LE
                         MEILLEUR DE
                         L'AUTOMOBILE</span></h1>
             </div>
@@ -122,8 +124,8 @@
                             esse eligendi, fugiat odit repellendus quidem alias fuga minus! Porro quas autem consectetur
                             adipisci, quidem optio. Doloremque porro sapiente vitae blanditiis reiciendis enim molestias
                             explicabo reprehenderit! Deleniti!</p>
-                        <!--Fin de la première ligne d'article-->
                     </span>
+                    <!--Fin de la première ligne d'article-->
                 </div>
                 <div class="row col-10 offset-1 pt-5">
                     <span class="col-lg-6">
@@ -144,7 +146,7 @@
                         </div>
                         <!--Fin de la deuxième ligne d'article-->
                     </span>
-                    <span class="col-10 offset-1 offset-lg-0 gy-3 col-lg-6 pb-5">
+                    <span class="col-10 offset-1 offset-lg-0 gy-3 col-lg-6 pb-5 pt-5 pt-sm-0">
                         <img src="/ImgGlobal/entretien.jpg" alt="entretien" style="max-width: 100%;height:auto">
                     </span>
                 </div>
@@ -287,14 +289,15 @@
                     </span>
                 </div>
             </div>
-            <div class="d-flex justify-content-center py-5 pb-sm-6">
+            <div class="d-flex justify-content-center py-6 pb-sm-6">
                 <button type="button" class="btn btn-primary py-3 px-5"><a href="contact.html"
                         class="text-white text-decoration-none fw-bold fs-5">CONTACTEZ-NOUS</a></button>
             </div>
             <span id="vehicule3" class="py-6 px-0">
                 <div class="bg-warning bg-opacity-75 my-4 py-4 col-12 col-sm-10 col-lg-4 offset-sm-1 px-sm-5">
                     <h1 class="offset-2 offset-sm-1 fs-2 fw-bold col-6 col-sm-10 mt-5">CLUB AUTO<br>
-                        <span class="text-white">VENTE ET LOCATION</span></h1>
+                        <span class="text-white">VENTE ET LOCATION</span>
+                    </h1>
                     <p class="fs-4 text-black col-8 offset-2 col-sm-10 offset-sm-1 my-5">Lorem ipsum dolor sit
                         amet consectetur
                         adipisicing elit. Aut aliquid quos cumque voluptate reiciendis quaerat ab consequuntur alias,
