--- a/contact.html
+++ b/contact.html
@@ -19,8 +19,8 @@
     <header id="mainHeader">
         <div class="bg-dark row py-sm-4">
             <div class="row col-sm-10 offset-sm-1">
-                <div class="d-sm-none d-flex justify-content-end">
-                    <div class="navbar navbar-expand-sm navbar-light px-3 py-3 row col-sm-12 offset-sm-1 py-sm-4">
+                <div class="d-sm-none d-flex justify-content-end position-absolute">
+                    <div class="navbar navbar-expand-sm navbar-light pt-5 px-3 py-3 row col-sm-12 offset-sm-1 py-sm-4">
                         <button type="button" class="navbar-toggler pb-2 d-sm-none" data-bs-toggle="collapse"
                             data-bs-target="#navbar-content" aria-controls="navbar-content" aria-expanded="false"
                             aria-label="Toggle navigation">
@@ -33,7 +33,7 @@
                                     title="Accéder directement au contenu principal de cette page">Passer le
                                     menu</a></p>
                             <ul class="navbar-nav ms-auto">
-                                <li class="nav-item"><a class="nav-link" href="Index.html">ACCUEIL</a></li>
+                                <li class="nav-item"><a class="nav-link" href="index.html">ACCUEIL</a></li>
                                 <li class="nav-item"><a class="nav-link" href="vente.html">VENTE</a></li>
                                 <li class="nav-item"><a class="nav-link" href="location.html">LOCATION</a></li>
                                 <li class="nav-item"><a class="nav-link" href="contact.html">CONTACT</a></li>
@@ -41,8 +41,10 @@
                         </nav>
                     </div>
                 </div>
-                <h1 class="d-none d-sm-flex text-white fs-2 fw-bold col-sm align-self-center p-0 ps-sm-6 pt-sm-4 m-0">
-                    CLUB AUTO</h1>
+                <h1
+                    class="d-flex justify-content-start text-white fs-2 fw-bold col-sm align-self-center p- ps-sm-6 pt-sm-4 ms-3 ms-sm-0">
+                    CLUB AUTO
+                </h1>
                 <div class="d-none d-sm-flex row col-sm align-self-center p-0 pt-sm-4 m-0 lh-sm">
                     <img src="/ImgHeader/icone-adresse.png" alt="Icone d'adresse" class="col-auto pe-0"
                         style="height: 2.5em; width:auto">
@@ -52,8 +54,8 @@
                         75000 PARIS
                     </span>
                 </div>
-                <div class="text-white row col-sm align-self-center pt-sm-4 m-0 lh-1">
-                    <img src="ImgHeader/icon-telephone.png" alt="logo telephone" class="offset-1 col-auto pe-0"
+                <div class="text-white row col-sm align-self-center pb-5 pb-sm-0 pt-sm-4 m-0 lh-1 p-0 ms-3">
+                    <img src="ImgHeader/icon-telephone.png" alt="logo telephone" class="offset-sm-1 col-auto pe-0"
                         style="height: 2.5em; width:auto">
                     <span class="col-auto fw-bold">
                         <span class="text-secondary fw-bold">T&Eacute;L&Eacute;PHONE :</span><br>
@@ -75,8 +77,8 @@
             <div class="d-flex justify-content-end col-10 offset-1" id="navbarSupportedContent">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link text-white bg-secondary fw-bold disabled py-3 px-4 d-block"
-                            href="/Index.html" title="Vers la page d'acceuil du site Club Auto"><span>ACCUEIL</span></a>
+                        <a class="nav-link text-black fw-bold py-3 px-4 d-block"
+                            href="/index.html" title="Vers la page d'acceuil du site Club Auto"><span>ACCUEIL</span></a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link text-black fw-bold py-3 px-4" href="/vente.html"
@@ -87,7 +89,7 @@
                             title="Vers la page de location du site Club Auto">LOCATION</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-black fw-bold py-3 px-4" href="/contact.html"
+                        <a class="nav-link text-white bg-secondary fw-bold py-3 px-4" href="/contact.html"
                             title="Vers la page de contact du site Club Auto">CONTACT</a>
                     </li>
                 </ul>
@@ -98,7 +100,7 @@
     <!--Ici commence la #pageContact-->
     <section id="bg-contact" class="py-5 bg-light">
         <div>
-            <div class="bg-white col mx-5 my-5">
+            <div class="bg-white mx-6 my-5">
                 <h1 class="fw-bold offset-1 py-5">CONTACTEZ-NOUS</h1>
                 <form id="frmContact" action="merci.html" class="row col-10 offset-1">
                     <div class="row offset-1 col-10 ms-0 col-sm-6">
@@ -124,7 +126,7 @@
                         </div>
                     </div>
                     <div class="mt-5 mb-2 m-sm-0 col-sm-6">
-                        <label class="form-label col-12 pb-2" for="message">Message</label>
+                        <label class="form-label pb-2" for="message">Message</label>
                         <textarea rows="3" class="form-control rounded-0 bg-light pt-2 pb-6 ps-4" name="message"
                             id="message" placeholder="Entrer votre message" aria-describedby="button-addon2"></textarea>
                         <button type="button" class="btn btn-primary my-4 py-2 px-5"><a href="merci.html"
