--- a/merci.html
+++ b/merci.html
@@ -4,72 +4,156 @@
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+  <meta name="description"
+    content="Club Auto vous permet d'acheter ou de louer une grande gamme de voiture à petit prix">
+  <meta name="viewport" content="width=device-width, initial-scale=1.o" />
   <link rel="stylesheet" href="scss/bootstrap.css">
+  <link rel="stylesheet" href="css/ClubAuto.css">
   <script src="js/bootstrap.bundle.min.js" defer></script>
-  <title>Club Auto</title>
+  <script src="https://kit.fontawesome.com/391ebf2e49.js" crossorigin="anonymous"></script>
+  <title>Club Auto - Page d'Accueil</title>
 </head>
-<!-- Colors : primary (blue) #6C98E1; secondary (black) #232628; light (grey) #ECEFF3; info (brown) #CC6119; warning (yellow) #FAB637; danger (red) #FF4848; -->
 
 <body>
+  <!--Ici commence le #mainHeader-->
   <header id="mainHeader">
-    <h1>CLUB AUTO</h1>
-    <div>
-      <p><img src="ImgHeader/icone-adresse.png" alt="logo adresse"></p>
-      <p>ADRESSE: <br> AVENUE CHARLES DE GAULLE <br> 75000 PARIS</p>
+    <div class="bg-dark row py-sm-4">
+      <div class="row col-sm-10 offset-sm-1">
+        <div class="d-sm-none d-flex justify-content-end position-absolute">
+          <div class="navbar navbar-expand-sm navbar-light pt-5 px-3 py-3 row col-sm-12 offset-sm-1 py-sm-4">
+            <button type="button" class="navbar-toggler pb-2 d-sm-none" data-bs-toggle="collapse"
+              data-bs-target="#navbar-content" aria-controls="navbar-content" aria-expanded="false"
+              aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+            </button>
+            <!--Bouton Toggler visible en sm-->
+            <nav class="collapse navbar-collapse" id="navbar-content">
+              <h1 class="accessibility">Menu principal</h1>
+              <p class="accessibility"><a href="#pageContent"
+                  title="Accéder directement au contenu principal de cette page">Passer le
+                  menu</a></p>
+              <ul class="navbar-nav ms-auto">
+                <li class="nav-item"><a class="nav-link" href="index.html">ACCUEIL</a></li>
+                <li class="nav-item"><a class="nav-link" href="vente.html">VENTE</a></li>
+                <li class="nav-item"><a class="nav-link" href="location.html">LOCATION</a></li>
+                <li class="nav-item"><a class="nav-link" href="contact.html">CONTACT</a></li>
+              </ul>
+            </nav>
+          </div>
+        </div>
+        <h1
+          class="d-flex justify-content-start text-white fs-2 fw-bold col-sm align-self-center p- ps-sm-6 pt-sm-4 ms-3 ms-sm-0">
+          CLUB AUTO
+        </h1>
+        <div class="d-none d-sm-flex row col-sm align-self-center p-0 pt-sm-4 m-0 lh-sm">
+          <img src="/ImgHeader/icone-adresse.png" alt="Icone d'adresse" class="col-auto pe-0"
+            style="height: 2.5em; width:auto">
+          <span class="col-auto p-0 text-white m-0">
+            <span class="text-secondary fw-bold">ADRESSE :</span><br>
+            AVENUE CHARLES DE GAULLE<br>
+            75000 PARIS
+          </span>
+        </div>
+        <div class="text-white row col-sm align-self-center pb-5 pb-sm-0 pt-sm-4 m-0 lh-1 p-0 ms-3">
+          <img src="ImgHeader/icon-telephone.png" alt="logo telephone" class="offset-sm-1 col-auto pe-0"
+            style="height: 2.5em; width:auto">
+          <span class="col-auto fw-bold">
+            <span class="text-secondary fw-bold">T&Eacute;L&Eacute;PHONE :</span><br>
+            <span class="text-white fw-bold fs-6">01 23 45 67 89</span>
+          </span>
+        </div>
+        <div class="text-white d-none d-sm-block col-sm align-self-center p-0 pt-sm-4 m-0 fw-bold lh-sm">
+          <span class="text-secondary">OUVERTURE :</span> Du Lundi au Samedi<br>
+          <span class="text-secondary">HORAIRES :</span> De 9h à 17h
+        </div>
+        <div class="d-none d-sm-block col-sm align-self-center p-0 ps-sm-4 pt-sm-4 m-0">
+          <span><img src="logos/logoFacebookRond.jpg" alt="logo rond facebook" class="pe-3"></span>
+          <span><img src="logos/logoTwitterRond.jpg" alt="logo rond twitter"></span>
+        </div>
+      </div>
     </div>
-    <div>
-      <p><img src="ImgHeader/icon-telephone.png" alt="logo telephone"></p>
-      <p>TÉLÉPHONE: <br> <strong>01 23 45 67 89</strong></p>
-    </div>
-    <div>
-      <p>OUVERTURE: Du Lundi au Samedi <br> HORAIRES: De 9h à 17h</p>
-    </div>
-    <div>
-      <p><img src="logos/logoFacebookRond.jpg" alt="logo rond facebook "></p>
-      <p><img src="logos/logoTwitterRond.jpg" alt="logo rond twitter"></p>
-    </div>
-    <nav id="mainNav">
-      <h1 class="accessibility">Menu principal</h1>
-                    <p class="accessibility"><a href="#pageContent" title="Accéder directement au contenu principal de cette page">Passer le menu</a></p>
-      <ul>
-        <li><a href="Index.html"><strong>ACCUEIL</strong></a></li>
-        <li><a href="vente.html"><strong>VENTE</strong></a></li>
-        <li><a href="location.html"><strong>LOCATION</strong></a></li>
-        <li><a href="contact.html"><strong>CONTACT</strong></a></li>
-      </ul>
+    <nav id="mainNav"
+      class="navbar navbar-expand-sm bg-light container-fluid d-none d-sm-block position-absolute bg-opacity-75 p-0 px-sm-6">
+      <div class="d-flex justify-content-end col-10 offset-1" id="navbarSupportedContent">
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a class="nav-link text-black fw-bold py-3 px-4 d-block" href="/index.html"
+              title="Vers la page d'acceuil du site Club Auto"><span>ACCUEIL</span></a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link text-black fw-bold py-3 px-4" href="/vente.html"
+              title="Vers la page de vente du site Club Auto">VENTE</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link text-black fw-bold py-3 px-4" href="/location.html"
+              title="Vers la page de location du site Club Auto">LOCATION</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link text-white bg-secondary fw-bold py-3 px-4" href="/contact.html"
+              title="Vers la page de contact du site Club Auto">CONTACT</a>
+          </li>
+        </ul>
+      </div>
     </nav>
-    <button id="menuToggle"><img src="/ImgHeader/hamburger.svg" alt="Ouvir / Fermer le menu"></button>
   </header>
   <!--Ici se termine le #mainHeader-->
   <main id="pageContent">
-    <h1>Merci</h1>
-    <p>Merci pour votre message. Notre équipe reprendra contact avec vous dans les 3 jours ouvrables.</p>
-    <p>À très bientôt</p>
+    <section id="merci" class="py-6">
+      <aside class="bg-white bg-opacity-50 mx-6">
+        <h1 class="fs-1">Merci</h1>
+        <p class="fs-3">Merci pour votre message. Notre équipe reprendra contact avec vous dans les 3 jours ouvrables.
+        </p>
+        <p class="fs-3">À très bientôt</p>
+      </aside>
+    </section>
   </main>
   <!--Ici se termine le #pageContent-->
-  <section id="mainFooter">
-    <footer>
-      <h3><strong>CLUB</strong> AUTO</h3>
-      <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Labore nesciunt natus id, facere voluptatibus
-        praesentium adipisci similique ea sit.</p>
-      <h3>HORAIRE D'OUVERTURE</h3>
-      <p>Lundi - Samedi : 09:00 - 17H00 <br> Dimanche et jours fériés : Fermé</p>
-      <h3>NEWSLETTER</h3>
-      <div>
-        <input type="email" id="Email" placeholder="Entrez votre email" required>
+  <!--Ici commence le #mainfooter-->
+  <section class="row m-0" id="mainFooter">
+    <footer class="bg-dark text-light">
+      <div class="div col-12 pb-0 row">
+        <div class="col-sm-6 col-lg px-4 pt-5">
+          <h1 class="fs-4 fw-bold"><span class="text-primary fw-bold">CLUB</span> AUTO</h1>
+          <p class="fs-6 text-white-50 pt-2">Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+            Labore
+            nesciunt natus id, facere
+            voluptatibus
+            praesentium adipisci similique ea sit.</p>
+        </div>
+        <div class="col-sm-6 col-lg py-1 px-4 pt-5" ->
+          <h1 class="fs-4 fw-bold pb-2">HORAIRE D'OUVERTURE</h1>
+          <span class="ca-text-footer text-white-50 fw-bold">Lundi - Samedi :</span> 09:00 - 17H00 <br>
+          <span class="ca-text-footer text-white-50 fw-bold"> Dimanche et jours fériés :</span> Fermé
+        </div>
+        <div class="col-sm-6 col-lg px-4">
+          <h1 class="fs-4 fw-bold pb-2 pt-5">NEWSLETTER</h1>
+          <div class="input-group mb-3">
+            <input type="text" class="form-control rounded-0" placeholder="Entrez votre Email"
+              aria-label="Entrez votre Email" aria-describedby="button-addon2">
+            <button class="btn p-0 m-0 border-0" type="button" id="button-addon2"><img
+                src="/LogoGlobal/connexion-sans-fil.png" alt="logo de connexion" style="height: 3em;"></button>
+          </div>
+          <label for="Email" class="text-white-50 pb-3 ca-text-footer">Inscrivez-vous pour recevoir les
+            dernières
+            offres</label>
+        </div>
+        <div class="col-sm-6 col-lg pt-5 px-4">
+          <h1 class="fs-4 fw-bold">RESEAUX SOCIAUX</h1>
+          <div class="pb-3 pt-3">
+            <img class="mx-1 ca-logo-size" src="logos/logoFacebook.jpg" alt="logo facebook">
+            <img class="mx-1 ca-logo-size" src="logos/logoTwitter.jpg" alt="logo twitter">
+            <img class="mx-1 ca-logo-size" src="logos/logoInstagram.jpg" alt="logo instagram">
+            <img class="mx-1 ca-logo-size" src="logos/logoGooglePlus.jpg" alt="logo googleplus">
+            <img class="mx-1 ca-logo-size" src="logos/logoYoutube.jpg" alt="logo youtube">
+          </div>
+        </div>
       </div>
-      <p>Inscrivez-vous pour recevoir les dernières offres</p>
-      <h3>RESEAUX SOCIAUX</h3>
-      <p><img src="logos/logoFacebook.jpg" alt="logo facebook"></p>
-      <p><img src="logos/logoTwitter.jpg" alt="logo twitter"></p>
-      <p><img src="logos/logoInstagram.jpg" alt="logo instagram"></p>
-      <p><img src="logos/logoGooglePlus.jpg" alt="logo googleplus"></p>
-      <p><img src="logos/logoYoutube.jpg" alt="logo youtube"></p>
-      <p>Copyright &copy; Club Auto - Tous droits réservés</p>
+      <hr class="m-4">
+      <p id="copyright" class="text-center text-white-50">Copyright &copy; Club Auto - Tous droits réservés -
+        Litche Miguel</p>
     </footer>
   </section>
-  <!--Ici se termine le #mainFoter-->
+  <!--Ici se termine le #mainFooter-->
 </body>
 
 </html>
