--- a/DétailsVéhicules.html
+++ b/DétailsVéhicules.html
@@ -98,43 +98,75 @@
   </header>
   <!--Ici se termine le #mainHeader-->
   <main id="pageContent">
-    <h1>BMW 535i, Navi, Leather, ABS</h1>
-    <p><img src="/ImgGlobal/vehicule2.jpg" alt="Véhicule Vente"></p>
-    <nav id="DétailsNav">
-      <ul>
-        <li>DESCRIPTION</li>
-        <li>TECHNIQUE</li>
-        <li>OPTIONS</li>
-        <li>CONTACT</li>
-      </ul>
-    </nav>
-    <article>
-      <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Blanditiis fuga, repudiandae totam assumenda quia
-        magnam voluptatum labore tempora. Exercitationem laborum amet facilis dolor et, aperiam cupiditate quis est sit
-        labore.</p>
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur maxime cumque cupiditate soluta eligendi
-        vitae neque nisi sint delectus, at placeat ut harum consequatur aliquid, explicabo similique. Commodi cumque
-        tempora ea? Tempora eaque perspiciatis inventore laborum non. Fugiat iste non laudantium illum rerum magnam
-        voluptatem voluptatibus aperiam veniam. Totam, maxime in tempora eaque dolorem labore? Fuga possimus omnis iste
-        magni exercitationem reprehenderit sunt veritatis ducimus aliquam quam expedita, dolore culpa. Non, saepe
-        tenetur? Aut quia earum error omnis accusamus corrupti temporibus, dolore praesentium veniam rerum assumenda
-        nisi est eius tempora magni quasi, harum, vel ipsa officiis! Neque facere repellendus quidem!</p>
-      <p><i>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Explicabo quod nesciunt, deleniti ex temporibus
-          dolorem alias quaerat commodi nam repellendus cumque tenetur deserunt, eius blanditiis pariatur eveniet
-          sapiente labore eos?</i></p>
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi tenetur exercitationem tempore, sed enim
-        provident dolorem. Harum saepe amet sint, illo dolorem nihil tenetur laboriosam earum commodi incidunt dolore
-        vitae similique iste, voluptatum odio dolores rerum quos officiis sit facilis labore omnis reprehenderit. Facere
-        placeat maiores illum mollitia ipsa ratione!</p>
-      <h3>OPTIONS</h3>
-      <ul>
-        <li>Lorem ipsum dolor sit amet.</li>
-        <li>Lorem ipsum dolor sit amet.</li>
-        <li>Lorem ipsum dolor sit amet.</li>
-        <li>Lorem ipsum dolor sit amet.</li>
-        <li>Lorem ipsum dolor sit amet.</li>
-      </ul>
-    </article>
+    <section class="row">
+      <div class="col-10 offset-1 px-0 mt-6 mt-sm-5 col-sm-7">
+        <span class="text-muted fs-5">ACCUEIL / VENTE / BMW 535I, NAVI, LEATHER, ABS</span>
+        <hr class="mb-5">
+        <h1 class="fw-bold mb-4 fs-1">BMW 535i, Navi, Leather, ABS</h1>
+        <img src="/ImgGlobal/vehicule2.jpg" alt="Véhicule Vente" style="max-width: 100%;height:auto">
+      </div>
+      <div class="col-10 offset-1 my-5 bg-dark px-1 col-sm-7">
+        <div class="bg-white fw-bold text-center py-4  border-top border-5 border-secondary" style="margin-top:-0.28em;">DESCRIPTION</div>
+        <div class="text-white fw-bold text-center my-4">TECHNIQUE</div>
+        <div class="text-white fw-bold text-center my-5">OPTIONS</div>
+        <div class="text-white fw-bold text-center my-4">CONTACT</div>
+      </div>
+      <article class="col-10 offset-1 col-sm-7">
+        <p class="fs-4 mb-4">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Blanditiis fuga, repudiandae
+          totam assumenda quia
+          magnam voluptatum labore tempora. Exercitationem laborum amet facilis dolor et, aperiam cupiditate quis est
+          sit
+          labore.</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam dolor quibusdam optio harum magnam, non quia distinctio modi dolorum maiores natus iste labore. Possimus rerum est nulla? Eum reprehenderit numquam similique reiciendis. Eum consequuntur sunt officia quis reiciendis nam eaque fuga unde amet dolorum ipsum nulla atque ratione ex placeat rem modi ad, vel autem in iusto. Optio veniam impedit repellat laborum saepe nulla assumenda! Consectetur tempora deleniti odit vitae dolore vel provident eos corporis? Sapiente expedita saepe ipsum laboriosam exercitationem suscipit nemo doloremque provident commodi laborum beatae libero consequatur possimus fugit quidem nesciunt vitae, iusto quo eveniet. Consequatur optio eius quaerat dolorem ipsam natus cumque, harum reiciendis adipisci animi eligendi omnis nulla doloremque repudiandae repellendus totam itaque suscipit, et quibusdam iusto porro eveniet quae voluptatibus? Fugiat recusandae totam esse assumenda. Reiciendis distinctio delectus repellat est corporis commodi omnis pariatur sit quia. Esse atque nesciunt cumque doloremque odio. Sit, alias.</p>
+        <div class="my-4 border-start border-secondary border-3">
+          <p class="fst-italic text-muted mx-4">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Explicabo quod
+            nesciunt, deleniti ex temporibus
+            dolorem alias quaerat commodi nam repellendus cumque tenetur deserunt, eius blanditiis pariatur eveniet
+            sapiente labore eos?</p>
+        </div>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi tenetur exercitationem
+          tempore, sed enim
+          provident dolorem. Harum saepe amet sint, illo dolorem nihil tenetur laboriosam earum commodi incidunt dolore
+          vitae similique iste, voluptatum odio dolores rerum quos officiis sit facilis labore omnis reprehenderit.
+          Facere
+          placeat maiores illum mollitia ipsa ratione!</p>
+        <h1 class="my-5 fs-3">OPTIONS</h1>
+        <div>
+          <div class="mb-3">
+            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+              class="bi bi-check-circle-fill" viewBox="0 0 16 16" style="color: #CC6119">
+              <path
+                d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zm-3.97-3.03a.75.75 0 0 0-1.08.022L7.477 9.417 5.384 7.323a.75.75 0 0 0-1.06 1.06L6.97 11.03a.75.75 0 0 0 1.079-.02l3.992-4.99a.75.75 0 0 0-.01-1.05z" />
+            </svg>
+            <span class="ms-3">Lorem ipsum dolor sit amet.</span>
+          </div>
+          <div class="mb-3">
+            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+              class="bi bi-check-circle-fill" viewBox="0 0 16 16" style="color: #CC6119">
+              <path
+                d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zm-3.97-3.03a.75.75 0 0 0-1.08.022L7.477 9.417 5.384 7.323a.75.75 0 0 0-1.06 1.06L6.97 11.03a.75.75 0 0 0 1.079-.02l3.992-4.99a.75.75 0 0 0-.01-1.05z" />
+            </svg>
+            <span class="ms-3">Lorem ipsum dolor sit amet.</span>
+          </div>
+          <div class="mb-3">
+            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+              class="bi bi-check-circle-fill" viewBox="0 0 16 16" style="color: #CC6119">
+              <path
+                d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zm-3.97-3.03a.75.75 0 0 0-1.08.022L7.477 9.417 5.384 7.323a.75.75 0 0 0-1.06 1.06L6.97 11.03a.75.75 0 0 0 1.079-.02l3.992-4.99a.75.75 0 0 0-.01-1.05z" />
+            </svg>
+            <span class="ms-3">Lorem ipsum dolor sit amet.</span>
+          </div>
+          <div class="mb-6">
+            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+              class="bi bi-check-circle-fill" viewBox="0 0 16 16" style="color: #CC6119">
+              <path
+                d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zm-3.97-3.03a.75.75 0 0 0-1.08.022L7.477 9.417 5.384 7.323a.75.75 0 0 0-1.06 1.06L6.97 11.03a.75.75 0 0 0 1.079-.02l3.992-4.99a.75.75 0 0 0-.01-1.05z" />
+            </svg>
+            <span class="ms-3">Lorem ipsum dolor sit amet.</span>
+          </div>
+        </div>
+      </article>
+    </section>
   </main>
   <!--Ici se termine le #pageContent-->
   <!--Ici commence le #mainfooter-->
