--- a/DétailsVéhicules.html
+++ b/DétailsVéhicules.html
@@ -97,6 +97,7 @@
     </nav>
   </header>
   <!--Ici se termine le #mainHeader-->
+  <!--Ici commence l'article-->
   <main id="pageContent">
     <section class="row">
       <div class="col-10 offset-1 px-0 mt-6 mt-sm-5 col-sm-7">
