--- a/Index.html
+++ b/Index.html
@@ -16,6 +16,8 @@
 
 <body>
     <!--Ici commence le #mainHeader-->
+    <!--Ici commence le #mainHeader-->
+
     <header id="mainHeader">
         <div class="bg-dark row py-sm-4">
             <div class="row col-sm-10 offset-sm-1">
